--- a/inferencev2.ipynb
+++ b/inferencev2.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Feb  6 06:32:45 2024       \n",
+      "Tue Feb  6 12:26:03 2024       \n",
       "+---------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 535.154.05             Driver Version: 535.154.05   CUDA Version: 12.2     |\n",
       "|-----------------------------------------+----------------------+----------------------+\n",
@@ -46,7 +46,7 @@
       "|                                         |                      |               MIG M. |\n",
       "|=========================================+======================+======================|\n",
       "|   0  NVIDIA A10G                    On  | 00000000:00:1E.0 Off |                    0 |\n",
-      "|  0%   27C    P8               9W / 300W |      3MiB / 23028MiB |      0%      Default |\n",
+      "|  0%   30C    P8              22W / 300W |      3MiB / 23028MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "                                                                                         \n",
@@ -66,21 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "config.json: 100%|██████████| 647/647 [00:00<00:00, 4.35MB/s]\n",
-      "model.safetensors.index.json: 100%|██████████| 23.9k/23.9k [00:00<00:00, 107MB/s]\n",
-      "model-00001-of-00003.safetensors: 100%|██████████| 4.94G/4.94G [00:16<00:00, 301MB/s]\n",
-      "model-00002-of-00003.safetensors: 100%|██████████| 5.00G/5.00G [03:02<00:00, 27.4MB/s]\n",
-      "model-00003-of-00003.safetensors: 100%|██████████| 4.54G/4.54G [02:45<00:00, 27.5MB/s]\n",
-      "Downloading shards: 100%|██████████| 3/3 [06:06<00:00, 122.02s/it]\n",
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:03<00:00,  1.23s/it]\n",
-      "generation_config.json: 100%|██████████| 116/116 [00:00<00:00, 782kB/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:03<00:00,  1.20s/it]\n"
      ]
     }
    ],
@@ -92,7 +85,7 @@
     "model_name = \"ogbrandt/mist7b-pjf-ft-bf16-v1\"\n",
     "\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
-    "  model_name, load_in_4bit=True, \n",
+    "  model_name, load_in_4bit=True, torch_dtype=torch.bfloat16,\n",
     "    device_map= \"auto\")\n",
     "# model = AutoModelForCausalLM.from_pretrained(\n",
     "#     model_name, low_cpu_mem_usage=True,\n",
@@ -102,19 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tokenizer_config.json: 100%|██████████| 969/969 [00:00<00:00, 6.89MB/s]\n",
-      "tokenizer.json: 100%|██████████| 1.80M/1.80M [00:00<00:00, 1.87MB/s]\n",
-      "special_tokens_map.json: 100%|██████████| 437/437 [00:00<00:00, 3.56MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(model_name, trust_remote_code=True, padding_size=\"left\")\n",
     "tokenizer.pad_token = tokenizer.eos_token"
@@ -169,6 +152,43 @@
     "        self.stops = self.stops[i]\n",
     "\n",
     "stopping_criteria = StoppingCriteriaList([StoppingCriteriaSub(stops = [[1, 523, 28766, 321, 28730, 416, 28766, 28767], [1, 28705, 13]])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how to dunk??\n",
+      "Can you please explain the process of dunking (or dunking 101) in detail?\n",
+      "\n",
+      "Dunking 101 is a step-by-step guide to dunking 101. It starts with a warm-up, then moves on to the dunking dunk 101. The dunk 101 involves a series of progressions, such as dunk 101, dunk 101, and dunk 101. The dunk 101 is a more advanced version of the dunk 101, and it involves dunking dunk 101. The dunk 101 is a more advanced version of the dunk 101, and it involves dunk dunk 101. The dunk 101 is a more advanced version of the dunk 101, and\n"
+     ]
+    }
+   ],
+   "source": [
+    "# no template\n",
+    "prompt = \"how to dunk??\"\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model_input = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
+    "\n",
+    "_ = model.eval()\n",
+    "with torch.no_grad():\n",
+    "    out = model.generate(**model_input, do_sample=True, temperature=0.3, stopping_criteria=stopping_criteria, max_new_tokens=200)\n",
+    "\n",
+    "print(tokenizer.decode(out[0], skip_special_tokens=True, skip_prompt=True))"
    ]
   },
   {
