--- a/awq.ipynb
+++ b/awq.ipynb
@@ -34,6 +34,15 @@
     "# simple RAGAS eval using Azure OAI\n",
     "# https://docs.ragas.io/en/stable/howtos/customisations/azure-openai.html#load-sample-dataset"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use W&B Tables isntead to log: https://wandb.ai/capecape/LLMs/reports/How-to-Run-LLMs-Locally-With-llama-cpp-and-GGML--Vmlldzo0Njg5NzMx"
+   ]
   }
  ],
  "metadata": {
