--- a/inferencev2.ipynb
+++ b/inferencev2.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -171,9 +171,7 @@
      "output_type": "stream",
      "text": [
       "how to dunk??\n",
-      "Can you please explain the process of dunking (or dunking 101) in detail?\n",
-      "\n",
-      "Dunking 101 is a step-by-step guide to dunking 101. It starts with a warm-up, then moves on to the dunking dunk 101. The dunk 101 involves a series of progressions, such as dunk 101, dunk 101, and dunk 101. The dunk 101 is a more advanced version of the dunk 101, and it involves dunking dunk 101. The dunk 101 is a more advanced version of the dunk 101, and it involves dunk dunk 101. The dunk 101 is a more advanced version of the dunk 101, and\n"
+      "What is the process of dunking I'm trying to get a 360 dunk I'm a 6'10 and I'm trying to get a 360 dunk. I've been practicing for a while and I'm getting better but I don't know how to go from a 180 to a 360. Any tips on how to improve my dunking 360 would be appreciated. Thank you for your time.\n"
      ]
     }
    ],
@@ -186,7 +184,8 @@
     "\n",
     "_ = model.eval()\n",
     "with torch.no_grad():\n",
-    "    out = model.generate(**model_input, do_sample=True, temperature=0.3, stopping_criteria=stopping_criteria, max_new_tokens=200)\n",
+    "    # customise gen strategy: https://huggingface.co/docs/transformers/en/generation_strategies#decoding-strategies\n",
+    "    out = model.generate(**model_input,  penalty_alpha=0.6, top_k=4, stopping_criteria=stopping_criteria, max_new_tokens=200)\n",
     "\n",
     "print(tokenizer.decode(out[0], skip_special_tokens=True, skip_prompt=True))"
    ]
