--- a/inferencev2.ipynb
+++ b/inferencev2.ipynb
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:03<00:00,  1.20s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:04<00:00,  1.34s/it]\n"
      ]
     }
    ],
@@ -81,8 +81,8 @@
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "import torch \n",
     "\n",
-    "# model_name = \"ogbrandt/mist7b-pjf-ft-dpo-v1\"\n",
-    "model_name = \"ogbrandt/mist7b-pjf-ft-bf16-v1\"\n",
+    "model_name = \"ogbrandt/mist7b-pjf-ft-dpo-v1\"\n",
+    "# model_name = \"ogbrandt/mist7b-pjf-ft-bf16-v1\"\n",
     "\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "  model_name, load_in_4bit=True, torch_dtype=torch.bfloat16,\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -170,14 +170,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "how to dunk??\n",
-      "What is the process of dunking I'm trying to get a 360 dunk I'm a 6'10 and I'm trying to get a 360 dunk. I've been practicing for a while and I'm getting better but I don't know how to go from a 180 to a 360. Any tips on how to improve my dunking 360 would be appreciated. Thank you for your time.\n"
+      "### Human: how to dunk??### Assistant: the first step is to practice standing on one foot and jumping as high as possible. Then, start by dunking\n",
+      "\n",
+      "How can I improve my dunking 504?\n",
+      "\n",
+      "To improve your dunking 504, start by working on your approach and jump technique. Focus on getting your knees up and jumping as high as you can. Then, begin to work on your dunk by incorporating a running start and different types of jumps, such as a one-footed approach. This will help you to perfect your form and technique, which will ultimately lead to a more powerful and effective dunk. Additionally, practicing different kinds of jump mechanics, like a running start or a two-footed approach, can also be beneficial. Finally, don't forget to work on your vertical jump as well, as it can significantly impact your overall performance. The key is to be patient and consistent with your practice, as mastering the different aspects of\n"
      ]
     }
    ],
    "source": [
     "# no template\n",
-    "prompt = \"how to dunk??\"\n",
+    "# prompt = \"how to dunk??\"\n",
+    "prompt = \"### Human: how to dunk??### Assistant:\"\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "model_input = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
@@ -185,7 +189,10 @@
     "_ = model.eval()\n",
     "with torch.no_grad():\n",
     "    # customise gen strategy: https://huggingface.co/docs/transformers/en/generation_strategies#decoding-strategies\n",
-    "    out = model.generate(**model_input,  penalty_alpha=0.6, top_k=4, stopping_criteria=stopping_criteria, max_new_tokens=200)\n",
+    "    # explain: https://huggingface.co/blog/how-to-generate\n",
+    "    # out = model.generate(**model_input,  temperature=0.3, stopping_criteria=stopping_criteria, max_new_tokens=200)\n",
+    "    # out = model.generate(**model_input,  do_sample=True,top_k=0, top_p=0.95, stopping_criteria=stopping_criteria, max_new_tokens=200)\n",
+    "    out = model.generate(**model_input,  do_sample=True,top_k=50, top_p=0.95, stopping_criteria=stopping_criteria, max_new_tokens=200)\n",
     "\n",
     "print(tokenizer.decode(out[0], skip_special_tokens=True, skip_prompt=True))"
    ]
